ruby_parser.output
Terminals unused in grammar

   IDENTIFIER
   FUNCAO
   END
   LP
   RP


Grammar

    0 $accept: programa $end

    1 programa: commands

    2 commands: %empty
    3         | commands command

    4 command: PUTS STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258)
STRING (259) 4
FUNCAO (260)
END (261)
PUTS (262) 4
LP (263)
RP (264)


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
programa (11)
    on left: 1, on right: 0
commands (12)
    on left: 2 3, on right: 1 3
command (13)
    on left: 4, on right: 3


State 0

    0 $accept: . programa $end

    $default  reduce using rule 2 (commands)

    programa  go to state 1
    commands  go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    1 programa: commands .
    3 commands: commands . command

    PUTS  shift, and go to state 4

    $default  reduce using rule 1 (programa)

    command  go to state 5


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    4 command: PUTS . STRING

    STRING  shift, and go to state 6


State 5

    3 commands: commands command .

    $default  reduce using rule 3 (commands)


State 6

    4 command: PUTS STRING .

    $default  reduce using rule 4 (command)
